--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,4 +1,20 @@
 .Weather {
-    background-color: rgb(32, 101, 101);
+    border: 1px solid  rgb(68, 68, 68);
+    background-color: rgb(40, 136, 136);
     color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 16px;
+    margin: 30px auto;
+    border-radius: 8px;
+}
+
+.Weather ul {
+    list-style: none;
+    padding: 0;
+    margin:0;
+}
+
+.Weather form {
+    line-height: 30px;
+    margin-bottom: 20px 0 0 0;
 }
