--- a/src/Weather.css
+++ b/src/Weather.css
@@ -14,7 +14,17 @@
     margin:0;
 }
 
-.Weather form {
-    line-height: 30px;
+.Weather form, .searchBar {
+    line-height: 35px;
     margin-bottom: 20px 0 0 0;
+    display: block;
+    margin: 5px auto;
+    border-radius: 4px;
+}
+
+.Weather .btn {
+    line-height: 30px;
+    background-color: rgb(180, 168, 191);
+    border-color: rgb(180, 168, 191);
+    margin-top: 2px;
 }
