added axios and weather api functions

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -30,9 +30,8 @@
 }
 
 .weatherIcon {
-    line-height: 60px;
     position: relative;
-    vertical-align: middle;
+    top: -15px;
 }
 
 .temperatureValue {
